Fix align-content issue

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,29 @@
+*
+{
+    margin: 0; 
+    padding: 0;
+}
 .gridItem
 {
     display: flex;
-    box-sizing: border-box;
-    flex: 1 0 100px;
-    width: 100%;
+
     border: 1px solid black;
     padding: 0%;
+    justify-content: center;
+    align-items: center;
 }
 body 
 {
-    margin: 0;
-    padding: 0;
+    background-color: whitesmoke;
 }
 .container 
 {
     display: flex;
     flex-wrap: wrap;
-    position: relative;
-    max-width: 1600px; 
+    width: 1600px; 
     height: 1600px; 
     border: 1px solid black;
+    margin: 20px auto;
+    align-content: flex-start;
+
 }
